unpackaged/main/default/objects/Sample_Kit__c/Sample_Kit__c.object-meta.xml
<CustomObject>
    <label>Sample Kit</label>
    <nameField>
        <displayFormat>Sample Kit-{0000}</displayFormat>
        <label>Sample Kit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Kits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>