unpackaged/main/default/objects/Sample_Kit__c/fields/Barrel_Order_Group__c.field-meta.xml
<CustomField>
    <fullName>Barrel_Order_Group__c</fullName>
    <label>Barrel Order Group</label>
    <referenceTo>Barrel_Order_Group__c</referenceTo>
    <relationshipLabel>Sample Kits</relationshipLabel>
    <relationshipName>Sample_Kits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>