unpackaged/main/default/objects/Sample_Kit__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Sample Kits</relationshipLabel>
    <relationshipName>Sample_Kits</relationshipName>
    <type>Lookup</type>
</CustomField>