unpackaged/main/default/objects/Sample_Kit__c/fields/Email_Sent_to_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_to_Submitter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent to Submitter</label>
    <type>Checkbox</type>
</CustomField>