unpackaged/main/default/objects/Sample_Kit__c/fields/Kit_Selection_Last_Day__c.field-meta.xml
<CustomField>
    <fullName>Kit_Selection_Last_Day__c</fullName>
    <formula>IF(NOT(ISNULL(Tracking_Number_Creation_Date__c)), Tracking_Number_Creation_Date__c + 30, null)</formula>
    <inlineHelpText>Last day to Select Sample Kit</inlineHelpText>
    <label>Kit Selection Last Day</label>
    <type>DateTime</type>
</CustomField>