unpackaged/main/default/objects/Sample_Kit__c/fields/Kit_Selection_Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Kit_Selection_Remaining_Days__c</fullName>
    <description>Days remaining to select Sample</description>
    <formula>IF(NOT(Sample_Selected__c), IF(NOT(ISNULL(Kit_Selection_Last_Day__c)), ABS(Kit_Selection_Last_Day__c  -  DATETIMEVALUE(TODAY())), Null), Null)</formula>
    <label>Kit Selection Remaining Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>