unpackaged/main/default/objects/Sample_Kit__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User who submitted a Single Barrel Order</description>
    <inlineHelpText>The User who submitted a Single Barrel Order.  An email will be sent to this user once the tracking number is entered.</inlineHelpText>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sample_Kits</relationshipName>
    <type>Lookup</type>
</CustomField>